--- a/index.css
+++ b/index.css
@@ -25,8 +25,9 @@
 
 /* MAIN VIDEO SPOT */
 .spot-eco-video iframe {
-    height: 30vh;
+    height: 80vh;
 }
+
 /* Seccion revista mobile */
 .content-revista {
     display: flex;
@@ -77,6 +78,7 @@
     padding: .7rem;
     color: white;
 }
+
 .contenedor__atributos button:hover {
     /* transform: scale(1.1); */
     background-color: #187e44;
@@ -130,6 +132,7 @@ form {
     color: white;
     width: 6rem;
 }
+
 .boton-form:hover {
     background-color: #126c39;
     color: white;
@@ -215,28 +218,10 @@ form {
         flex-direction: row;
     }
 
-    .carousel-change {
-        max-height: 100vh;
+    /* MAIN VIDEO SPOT */
+    .spot-eco-video iframe {
+        height: 90vh;
     }
-
-    .text-slider {
-        position: absolute;
-        bottom: 50%;
-    }
-
-    .text-slider h5 {
-        font-size: 4rem;
-    }
-
-    .text-slider p {
-        font-size: 2rem;
-    }
-
-    .text-slider .btn {
-        font-size: 2rem;
-        padding: 10px 15px;
-    }
-
     .title-revista h2 {
         text-align: center;
         font-size: 2.5rem;
@@ -247,12 +232,15 @@ form {
         display: flex;
         flex-direction: row;
     }
+
     .content-revista h2 {
         justify-content: start;
     }
+
     .content-revista img {
         width: 22rem;
     }
+
     .spot-eco-barrier iframe {
         margin-top: 2rem;
         margin-bottom: 1.6rem;
