--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+* {
+    font-family: 'Fjalla One', sans-serif;
+}
 /* VISTA MOBILE */
+
 /* Nav mobile*/
 .nav-content {
     display: flex;
@@ -57,62 +61,52 @@
     color: white;
     padding: 2rem
 }
-
 .contenedor__atributos h2 {
     font-size: 2.5rem;
 }
-
 .contenedor__atributos h3 {
     font-size: 1.8rem;
 }
-
 .contenedor__atributos p {
     font-size: 1rem;
 }
-
 .contenedor__atributos button {
     font-size: 1.5rem;
     background-color: #24a85d;
     border-radius: 40px;
     border: none;
-    padding: .7rem;
+    margin-top: .5rem;
+    padding: .8rem;
     color: white;
 }
-
 .contenedor__atributos button:hover {
     /* transform: scale(1.1); */
     background-color: #187e44;
     transition: .3s;
 }
-
 .iconos__atributos {
     font-size: 1.8rem;
     padding-bottom: .7rem;
     margin-top: .7rem;
     color: #24a85d
 }
-
-/* Seccion Spot mobile */
+/* seccion spot mobile */
 .spot-eco-barrier {
     text-align: center;
 }
-
 .spot-eco-barrier h2 {
     background-color: #126c39;
     color: white;
     font-size: 1.8rem;
     padding: 2.5rem;
     text-transform: uppercase;
-
 }
-
 .spot-eco-radio {
     padding: 2rem 0;
     text-align: center;
     color: #126c39;
     font-weight: bold;
 }
-
 .spot-eco-radio iframe {
     width: 100%;
     height: 200px;
@@ -144,11 +138,9 @@ form {
     font-weight: bold;
     text-align: center;
 }
-
 .container-mapa h2 {
     padding: 40px 0px 0px 0px;
 }
-
 /* Redes */
 .icono__wp img {
     position: fixed;
@@ -156,11 +148,9 @@ form {
     right: 10px;
     bottom: 10px;
 }
-
 .icono__wp img {
     width: 4rem;
 }
-
 .icono__wp img:hover {
     transform: scale(1.1);
     cursor: pointer;
@@ -170,12 +160,11 @@ form {
 .container-footer {
     text-align: center;
 }
-
 .container-footer img {
     width: 15rem;
 }
 
-/*>>>>>>>>>>>>>>>>>>>>>>>>>>>>> VISTA DESKTOP */
+/*>>>>>>>>>>>>>>>>>>>>>>>>>>>>> VISTA DESKTOP <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 @media (min-width:992px) {
     .nav-menu {
         display: flex;
@@ -251,7 +240,7 @@ form {
     }
 
     .spot-eco-barrier h2 {
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
 
     .spot-eco-radio iframe {
@@ -261,40 +250,38 @@ form {
     .spot-eco-radio h2 {
         padding: 2rem 0 2rem 0;
     }
-
     .form {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-
     .form-estilo {
         width: 60%;
     }
-
     .mapa-title h2 {
         font-size: 2.5rem;
     }
-
     .contenedor__atributos {
         padding: 4rem;
     }
-
     .contenedor__atributos__2 {
         display: flex;
         align-items: center;
     }
-
     .contenedor__atributos h2 {
-        font-size: 4.5rem;
+        font-size: 4rem;
         padding-bottom: 1rem;
     }
-
     .contenedor__atributos h3 {
         font-size: 1.5rem;
     }
-
     .iconos__atributos {
-        font-size: 2rem;
+        font-size: 1.8rem;
+    }
+    .item-box {
+        background-color: #244141;
+        border-radius:20px;
+        padding: 1rem;
+        margin: .8rem;
     }
 }
